Modificamos el trabajo 2

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>TodoMuebles</title>
     
     <!-- Activar css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- logotipo -->
-    <link rel="icon" type="image/x-icon" href="/Imagenes/logotipo titulo pag.jpg">
+    <link rel="icon" type="image/x-icon" href="./Imagenes/logotipo titulo pag.jpg">
 
     <!-- Letra -->
     <style>
@@ -26,7 +26,7 @@
     <!-- Logo -->
     <header id="header">
         <div class="logo">
-            <img src="/Imagenes/logonombre.png" alt="Logotipo todomuebles" width="140px">
+            <img src="./Imagenes/logonombre.png" alt="Logotipo todomuebles" width="140px">
         </div>
 
         <!-- Menu -->
@@ -46,7 +46,7 @@
         <!-- Foto e info -->
     <section id="section">
         <div class="tablones">
-                <div><img src="/Imagenes/DSC_0377-1024x678.jpg" alt="Imagen de tablones de madera" width="500" height="300"></div>
+                <div><img src="./Imagenes/DSC_0377-1024x678.jpg" alt="Imagen de tablones de madera" width="500" height="300"></div>
                     <div><h2 class="titulo1">Acerca de nuestros gustos</h2>
                     <p>Estamos de acuerdo que nuestros muebles hacen a nuestra casa, por eso les ofrecemos la mejor calidad de madera para hacer muebles de calidad y larga duración, tambien nos especializamos en hacer mesadas de cocina, nuestro equipo llega a su domicilio y lo instala, utilizamos incienso, roble, teca y pino. Tanto maderas de exterior como de interior.</p>
                     </div>
@@ -58,9 +58,9 @@
         <div class="footeralldiv">
             <p>Seguinos en nuestras redes</p>
             <div>
-                <a href="https://www.facebook.com/" target="_blank"><img src="/Imagenes/facebook.png" alt="Imagen de facebook" width="25px"></a>
-                <a href="https://www.instagram.com/" target="_blank"> <img src="/Imagenes/instagram.png" alt="imagen de instagram" width="29px"></a>
-                <a href="https://www.whatsapp.com/" target="_blank4"><img src="/Imagenes/wpp.png" alt="imagen de wpp" width="25px"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./Imagenes/facebook.png" alt="Imagen de facebook" width="25px"></a>
+                <a href="https://www.instagram.com/" target="_blank"> <img src="./Imagenes/instagram.png" alt="imagen de instagram" width="29px"></a>
+                <a href="https://www.whatsapp.com/" target="_blank4"><img src="./Imagenes/wpp.png" alt="imagen de wpp" width="25px"></a>
             </div>
             <h6>Designed & Developed by Agustin Racca &copy;2022<h6>
         </div>
