Cambiamos el movimiento del titulo

--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -20,6 +20,12 @@
         }
     </style>
 
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
     <header id="header">
@@ -41,8 +47,9 @@
     </header>
         
         <!-- Titulo -->
+    <div class="animate__animated animate__headShake">
         <h1 class="tituloprincipal">Empresa</h1>
-
+    </div>
         <main class="mainEmpresa">
             <div class="divEmpresa">
                 <div><img src="../Imagenes/empresataller.jpg" alt="Taller de Carpintero" width="600px">
