--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         }
     </style>
 
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
 
