--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -20,6 +20,12 @@
         }
     </style>
 
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
     <header id="header">
@@ -41,8 +47,9 @@
     </header>
         
         <!-- Titulo -->
+    <div class="animate__animated animate__headShake">
         <h1 class="tituloprincipal">Acerca De</h1>
-
+    </div>
         <main>
             <div class="divAcercade">
                 <div class="ImgAcercade"><img src="../Imagenes/carpinteria antigua.jpg" alt="Carpinteria 1975" width="450px"></div>
