--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -20,6 +20,12 @@
         }
     </style>
 
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
     <header id="header">
@@ -41,8 +47,9 @@
     </header>
     
         <!-- Titulo -->
+    <div class="animate__animated animate__headShake">
         <h1 class="tituloprincipal">Contacto</h1>
-
+    </div>
     <!-- Imagen Contacto -->
     <div class="imagencontacto">
         <img src="../Imagenes/imagencontacto.jpg" alt="Habitacion con muebles" width="500px" height="300">
