--- a/pages/producto.html
+++ b/pages/producto.html
@@ -20,6 +20,12 @@
         }
     </style>
 
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
     <header id="header">
@@ -41,8 +47,9 @@
     </header>
         
         <!-- Titulo -->
+    <div class="animate__animated animate__headShake">
         <h1 class="tituloprincipal">Tienda</h1>
-    
+    </div>
     <div>
         <h2 class="tituloSec">Productos</h2>
         <p class="parrafoProductos">Nuestros productos no tienen un precio ni una medida fija, varia depende el tamaño que usted elija.
